--- a/_config.yml
+++ b/_config.yml
@@ -99,16 +99,17 @@ content:
           During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
           I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
-      - layout: left
-        title: Oracle SQL&PL/SQL 개발자 향상과정
-        caption: 2020.05.16 - 2020.06.13
-        sub_title: 쌍용교육센터
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+  - title: certificate
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: center
+        title: 정보처리기사
+        caption: 2020.08.16
+        sub_title: 한국산업인력공단
+      - layout: center
+        title: SQLD
+        caption: 2019.09.24
+        sub_title: 한국데이터산업진흥원
 
   - title: A Little More About Me
     layout: text
