--- a/_config.yml
+++ b/_config.yml
@@ -47,10 +47,8 @@ github_username: jiyoung-99
 # About Section
 # about_title: About Me
 about_profile_image: images/IMG_5909.jpg
-about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+about_content: |
+  <mark>Java & Spring boot</mark> 3년차를 향해 달려가는 백엔드 개발자입니다. 현재 업계 1위의 데이터베이스 모니터링 솔루션 개발을 맡고 있으며 금융권 카드계 유지보수 업무와 금융권 결제 앱 개발을 해왔습니다.
 
 content:
   - title: Projects # Title for the section
@@ -76,13 +74,13 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: 엑셈
+        link: www.exem.com
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        sub_title: JAVA 백엔드 개발자
+        caption: 2021.06 ~ 현재
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          업계 1위의 데이터베이스 성능 관리 전문 솔루션 서비스
         description: | # this will include new lines to allow paragraphs
           Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
 
@@ -117,13 +115,6 @@ content:
       - Gaming
       - Knitting
       - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-<p>
- <img src="https://img.shields.io/badge/java-%23ED8B00.svg?&style=for-the-badge&logo=java&logoColor=white"/>
- <img src="https://img.shields.io/badge/python%20-%2314354C.svg?&style=for-the-badge&logo=python&logoColor=white"/>
- <img src="https://img.shields.io/badge/javascript%20-%23323330.svg?&style=for-the-badge&logo=javascript&logoColor=%23F7DF1E"/>
- <img src="https://img.shields.io/badge/markdown-%23000000.svg?&style=for-the-badge&logo=markdown&logoColor=white"/>
-</p>
-     
 
 # Footer
 footer_show_references: true
