--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ content:
     content:
       - layout: left
         title: 엑셈
-        link: www.exem.com
+        link: www.ex-em.com
         # link_text: boringcompany.com
         sub_title: JAVA 백엔드 개발자
         caption: 2021.06 ~ 현재
